--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "recharts": "^2.15.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.25.9",
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
